package cartes;

public class Chat extends CarteAnimal{
    public Chat(){
        super("Chat", 1, 0, 1, 0, false);
    }
}
