package cartes;

public class Grizzly extends CarteAnimal{
    public Grizzly(){
        super("Grizzly", 6, 4, 3, 0, false);
    }
}
