package cartes;

public class Hermine extends CarteAnimal{
    public Hermine(){
        super("Hermine", 3, 1, 1, 0, false);
    }
}
