package cartes;

public class Punaise extends CarteAnimal{
    public Punaise(){
        super("Punaise", 2, 1, 0, 2, false);
    }
}