package cartes;

public class Rocher extends CarteObstacle{
    public Rocher(){
        super("Rocher", 5);
    }
}
