package jeu;

public class JoueurHumain {
    public Commande choisirAction() {

    }
}
