package jeu;

public enum TypeCommande {
    PIOCHER,
    PLACER,
    FIN
}
